--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@zeit/next-sass": "^1.0.1",
     "next": "^10.0.0",
     "node-sass": "^6.0.0",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "^5.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.35.1",
